<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_RobotMode" Id="{db494ded-5119-4829-9668-a22c486cb433}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_RobotMode :
(
	STOP := 0,
	ESTOP,
	POSITION,
	VELOCITY
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>