<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_Robot3R" Id="{ac314762-16df-47a2-b7b8-44cc8c775bfa}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Robot3R
VAR_INPUT
	bEmStop : BOOL;
	Ts : LREAL := 0.01;
	bReset : BOOL;
	bEnable : BOOL;
	bEnableJoint : ARRAY [0..2] OF BOOL;
	eRobotModeCmd : E_RobotMode;
	fVelInput : ARRAY [0..2] OF LREAL;
	fPosInput : ARRAY [0..2] OF LREAL;	
	bPositionModeExecute 	: BOOL;
	fJointPositionOffset 	: ARRAY [0..2] OF LREAL;	
	fJointCalibrationOffset : ARRAY [0..2] OF LREAL;
END_VAR
VAR_OUTPUT
	eRobotMode : E_RobotMode := E_RobotMode.STOP;
	
	// Robot feedback
	q : ARRAY [0..2] OF LREAL;
	q_t : ARRAY [0..2] OF LREAL;
	tau : ARRAY [0..2] OF LREAL;
	
	bAnyJointActive : BOOL;
END_VAR
VAR
	// Setpoints
	qRef : ARRAY [0..2] OF LREAL;
	qRef_t : ARRAY [0..2] OF LREAL;
	qRef_tt : ARRAY [0..2] OF LREAL;
	

	i : USINT;
	j : USINT;
	k : USINT;
	joints : ARRAY [0..2] OF FB_Joint;
		
	//Velcity of last timestamp
	fVelInputOld : ARRAY [0..2] OF LREAL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bEmStop AND (eRobotMode <> E_RobotMode.ESTOP) THEN
	eRobotModeCmd := E_RobotMode.ESTOP;
END_IF

IF eRobotModeCmd <> E_RobotMode.NONE THEN
	CASE eRobotModeCmd OF
		 E_RobotMode.STOP:
		 	eRobotMode := E_RobotMode.STOP;
			
		 E_RobotMode.ESTOP:
		 	eRobotMode := E_RobotMode.ESTOP;
		 
		 E_RobotMode.POSITION:	
		 	eRobotMode := E_RobotMode.POSITION;
		 
		 E_RobotMode.VELOCITY:
		 	eRobotMode := E_RobotMode.VELOCITY;
			
		E_RobotMode.TORQUE:
			eRobotMode := E_RobotMode.TORQUE;
			
	END_CASE	
END_IF
eRobotModeCmd := E_RobotMode.NONE;

IF bReset AND NOT(bEmStop)  THEN
//	bEnableAll := FALSE;
	eRobotMode := E_RobotMode.STOP;
END_IF

// E-stop mode
IF(eRobotMode = E_RobotMode.ESTOP) THEN
	bEnable := FALSE;
	bReset := TRUE;	//to avoid error: the axis loss the enable signal while doing something
END_IF


bAnyJointActive := joints[0].bActive;
FOR k:= 1 TO 2 DO
	bAnyJointActive := bAnyJointActive OR joints[k].bActive;	
END_FOR

IF(eRobotMode = E_RobotMode.STOP) AND  NOT bAnyJointActive THEN
	bEnable := FALSE;
END_IF

// position mode
IF(eRobotMode = E_RobotMode.POSITION) THEN
	positionMode();
// velocity mode
ELSIF(eRobotMode = E_RobotMode.VELOCITY) THEN
	velocityMode();
END_IF




// Execute joints
FOR j:= 0 TO 2 DO
	joints[j](
		bReset:=bReset,
		bEnable:=bEnable AND bEnableJoint[j],
		eRobotMode := eRobotMode,
		bPositionModeExecute := bPositionModeExecute,
		fGearRatio := CONSTANTS.GEAR_RATIO[j],
		qRef:=qRef[j],
		qRef_t := qRef_t[j],
		qRef_tt:=qRef_tt[j],
		fOffset := fJointPositionOffset[j] + fJointCalibrationOffset[j]
	);

	// Assign feedback data from joints
	q[j] := joints[j].q;
	q_t[j] := joints[j].q_t;
	tau[j] := joints[j].tau;
	
END_FOR


]]></ST>
    </Implementation>
    <Method Name="positionMode" Id="{f9d459a6-0feb-4986-b627-22787cb88f98}">
      <Declaration><![CDATA[METHOD PRIVATE positionMode : BOOL
VAR_INPUT
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
FOR i:= 0 TO 2 DO
	IF joints[i].bActive THEN		
		// Set input based on velocity input u
		qRef[i] := fPosInput[i];
		qRef_t[i] := fVelInput[i];
		
	END_IF
	
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="velocityMode" Id="{125ad195-c68c-497a-bc79-95830c09961a}">
      <Declaration><![CDATA[METHOD PRIVATE velocityMode : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Integrate position

FOR i:= 0 TO 2 DO
	qRef[i] := joints[i].q;
	IF joints[i].bActive THEN		
		// Set input based on velocity input u
		qRef[i] := qRef[i] + fVelInput[i]*Ts;
		qRef_t[i] := fVelInput[i];
		qRef_tt[i] := (fVelInput[i]-fVelInputOld[i])/(Ts);
		// Update old variable
		fVelInputOld[i] := fVelInput[i];
		
//	ELSE
//		qRef[i] := joints[i].q;
//		qRef_t[i] := 0;
//		qRef_tt[i] := 0;	
	END_IF
	
END_FOR]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Robot3R">
      <LineId Id="983" Count="6" />
      <LineId Id="993" Count="2" />
      <LineId Id="999" Count="2" />
      <LineId Id="1004" Count="2" />
      <LineId Id="1010" Count="2" />
      <LineId Id="1015" Count="1" />
      <LineId Id="1018" Count="14" />
      <LineId Id="1034" Count="4" />
      <LineId Id="1077" Count="0" />
      <LineId Id="1039" Count="0" />
      <LineId Id="1041" Count="0" />
      <LineId Id="1043" Count="17" />
      <LineId Id="1080" Count="0" />
      <LineId Id="1061" Count="15" />
      <LineId Id="42" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot3R.positionMode">
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="3" />
      <LineId Id="23" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot3R.velocityMode">
      <LineId Id="9" Count="9" />
      <LineId Id="25" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="26" Count="4" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>